# VortexSTARK

./: .gitignore  AUDIT.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SOUNDNESS.md  STARKNET_POST.md  WINDOWS_SIMD_BUG.md  build.rs  gpu_monitor.py
crates/cuda-backend/: Cargo.toml
crates/cuda-backend/src/: accumulation_ops.rs  backend.rs  column.rs  component_prover.rs  field_ops.rs  fri_ops.rs  gkr_ops.rs  grind_ops.rs  lib.rs  merkle_ops.rs  poly_ops.rs  quotient_ops.rs  tests.rs
crates/cuda-backend/src/constraint_eval/: bytecode.rs  mod.rs  tracing.rs
cuda/: accumulate_lift.cu  accumulate_lift.fg  barycentric_eval.cu  batch_eval_at_point.cu  batch_inverse.cu  bit_reverse_wide.cu  bit_reverse_wide.fg  blake2s.cu  cairo_constraint.cu  circle_ntt.cu  circle_ntt_stwo.cu  constraint.cu  constraint_eval.cu  constraint_eval_warp.cu  fields.cu  fp252_test.cu  fri.cu  gather.cu  gkr.cu  gkr.fg  grind.cu  grind_m31_output.cu  grind_poseidon.cu  logup_interaction.cu  merkle_leaves_lifted.cu  merkle_poseidon252.cu  merkle_poseidon252.fg  pack_leaves.cu  pack_leaves.fg  pedersen_gpu.cu  poseidon2f_trace.cu  poseidon_constraint.cu  poseidon_trace.cu  quotient.cu  rpo_trace.cu  stark252_ntt.cu  twiddles.cu
cuda/dump_poseidon_comp_consts/: Cargo.toml
cuda/dump_poseidon_comp_consts/src/: main.rs
cuda/include/: blake2s.cuh  cm31.cuh  fp252.cuh  m31.cuh  poseidon252.cuh  poseidon_round_keys.cuh  qm31.cuh
src/: air.rs  channel.rs  circle.rs  fri.rs  lib.rs  merkle.rs  ntt.rs  oods.rs  poseidon.rs  poseidon2f.rs  prover.rs  rpo_m31.rs  stwo_export.rs  verifier.rs
src/cairo_air/: bitwise.rs  builtins.rs  casm_loader.rs  decode.rs  dict_air.rs  dict_consistency.rs  ec_constraint.rs  hints.rs  logup.rs  mod.rs  pedersen.rs  prover.rs  range_check.rs  stark252_field.rs  starknet_rpc.rs  trace.rs  vm.rs
src/cuda/: ffi.rs  mod.rs
src/device/: buffer.rs  mod.rs
src/field/: cm31.rs  m31.rs  mod.rs  qm31.rs
src/stark252/: cairo_air.rs  cairo_proof.rs  field.rs  fri.rs  logup.rs  merkle.rs  mod.rs  multi_stark.rs  ntt.rs  prover.rs  range_check.rs  stark.rs  verifier.rs
static/: index.html
tests/: constraint_completeness.rs  cross_validation.rs  property_tests.rs
tests/fixtures/: fibonacci.casm  fibonacci100.casm
