[package]
name = "vortexstark"
version = "0.1.0"
edition = "2024"
description = "GPU-native Circle STARK prover for RTX 5090"

[lib]
name = "vortexstark"
path = "src/lib.rs"

[[bin]]
name = "kraken-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
rand = "0.9"
