[workspace]
members = [".", "crates/cuda-backend"]
resolver = "3"

[package]
name = "vortexstark"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GPU-native Circle STARK prover for RTX 5090"

[lib]
name = "vortexstark"
path = "src/lib.rs"

[[bin]]
name = "vortex-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "dashboard"
path = "src/bin/dashboard.rs"

[[bin]]
name = "stark_cli"
path = "src/bin/stark_cli.rs"

[[bin]]
name = "sustained_bench"
path = "src/bin/sustained_bench.rs"

[[bin]]
name = "full_benchmark"
path = "src/bin/full_benchmark.rs"

[[bin]]
name = "rpo_bench"
path = "src/bin/rpo_bench.rs"

[[bin]]
name = "hash_bench"
path = "src/bin/hash_bench.rs"

[[bin]]
name = "gpu_bench"
path = "src/bin/gpu_bench.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
