[package]
name = "vortex-cuda-backend"
version = "0.1.0"
edition = "2021"
description = "CUDA GPU backend for stwo Circle STARK prover"

[[bin]]
name = "bench-stwo"
path = "src/bin/bench_stwo.rs"

[dependencies]
stwo = { git = "https://github.com/garrick99/stwo-fork.git", branch = "cuda-backend", features = ["prover"] }
stwo-constraint-framework = { git = "https://github.com/garrick99/stwo-fork.git", branch = "cuda-backend", features = ["prover"] }
vortexstark = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12.0"
num-traits = "0.2.17"
tracing = "0.1.40"
starknet-ff = { version = "0.3.7", default-features = false, features = ["alloc", "serde"] }
starknet-crypto = "0.6.2"
blake2 = "0.10.6"

[dev-dependencies]
rand = "0.8.5"
